cris/style.css
/* Positioning and styling main body elements */
html, body {
  height: 100%;
  margin: 0px;
  overflow-x: hidden;
}
body {
  background: rgba(240, 240, 240, 1.0);
  margin: 0px;
}
main {
  margin-bottom: 50px;
  margin-top: 5px;
  min-height: calc(100vh - 60px);
  overflow-y: auto;
  position: relative;
  z-index: 1;
}
h1, h2, h3 {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-weight: bold;
}
h1 {
  font-size: 20px;
  margin: 10px 5px;
}
h2 {
  font-size: 16px;
  margin: 10px 5px;
}
h3 {
  font-size: 14px;
  margin: 10px 25px;
  text-decoration: underline;
}
p {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  margin: 5px 25px;
  text-align: justify;
  width: fit-content;
}
ul {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  margin: 0px 50px 0px 5px;
  text-align: justify;
  width: fit-content;
}
/* Section separators and styling */
hr {
  background: linear-gradient(to right, rgba(0, 0, 0, 1.0), rgba(255, 255, 255, 0.5));
  border: 0;
  height: 1.25px;
  margin: 0px 5px 10px;
  max-width: 75%;
}
.separator-dots {
  background: linear-gradient(to right, rgba(255, 255, 255, 0.50), rgba(0, 0, 0, 1.0), rgba(255, 255, 255, 0.50));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  display: inline-block;
  font-size: 12px;
  letter-spacing: 12px;
}
.dot-container {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 15px auto;
}
.separator-line {
  background: linear-gradient(to right, rgba(255, 255, 255, 1.0), rgba(0, 0, 0, 1.0), rgba(255, 255, 255, 1.0));
  height: 1.25px;
  margin-left: 0px auto;
}
.section-color {
  background: rgba(255, 255, 255, 1.0);
  border: 0.5px solid rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.125);
  margin: 10px auto;
  padding: 10px;
  position: relative;
  max-width: 95%;
}
.container {
  display: flex;
  justify-content: left;
  margin-left: 10px;
  text-align: center;
}
.container ul {
  padding-left: 15px;
}
.container li {
  margin-bottom: 5px;
}
/* Linked images and sources */
.link-hover a:hover, .link-hover p:hover {
  text-decoration: underline;
}
.linked-image {
  display: block;
  margin: 20px auto;
  width: 1440px;
  height: auto;
  border: 2px solid #ddd;
  border-radius: 8px;
  transition: transform 0.3s ease;
}
/* Tables */
.table-container {
  border: 1.25px solid rgba(0, 0, 0, 0.125);
  border-radius: 3px;
  margin: 0 25px;
  max-height: 300px;
  max-width: fit-content;
  overflow-x: auto;
  overflow-y: auto;
}
table {
  border-collapse: collapse;
  table-layout: auto;
  width: auto;
}
th, td {
  border: 1px solid #ddd;
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  padding: 2px 5px;
  text-align: left;
  width: 120px;
  white-space: nowrap;
}
th {
  background-color: rgba(0, 100, 200, 0.45);
}
thead {
  background-color: white;
  position: sticky;
  top: 0;
}
table td:not(:first-child), th:not(:first-child) {
  text-align: center;  
}
#data-table td:first-child {
  background-color: rgba(245, 245, 245, 1);
}
/* Search Input */
#searchInput {
  font-size: 14px;
  margin-bottom: 10px;
  padding: 10px;
  width: 25%;
}
/* Special formatting for publications - long lines */
.instructions li {
  list-style-position: outside;
  list-style-type: lower-roman;
  margin-left: 25px;
}
.instructions p {
  margin-left: 15px;
}
.publications a {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 12px;
  font-weight: normal;
  justify-content: left;
  text-decoration: underline;
}
.publications a:hover {
  color: rgba(0, 0, 255, 1);
}
.publications li {
  font-size: 12px;
  list-style-position: outside;
  list-style-type: number;
  margin-bottom: 10px;
  max-width: 95%;
  width: fit-content;
}
/* Create a grid system for items */
.grid-container {
  background: rgba(174, 214, 241, 0.20);
  border: 0.5px solid rgba(0, 0, 0, 1);
  border-radius: 5px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(3, 1fr);
  margin: 10px auto;
  padding: 10px;
  width: fit-content;
}
.grid-item {
  background: rgba(255, 255, 255, 0.75);
  border: 0.5px solid rgba(0, 0, 0, .5);
  border-radius: 5px;
  color: black;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: bold;
  padding: 25px 10px;
  text-align: center;
  text-decoration: none;
}
.grid-item:hover {
  border-color: rgba(255, 255, 0, 0.25);
}
.grid-item:hover a:hover, .grid-hover p:hover {
  text-decoration: underline;
}
/* Code examples */
code {
  color: black;
  background-color: rgba(255, 248, 220, 0.45);
  border: 0.5px solid rgba(0, 0, 0, 0.50);
  border-radius: 3px;
  font-family: Courier New;
  font-size: 12px;
  font-weight: normal;
  margin: 10px 15px;
  max-width: 85%;
  overflow-x: auto;
  padding: 10px;
  text-align: left;
  text-decoration: none;
  white-space: nowrap;
  width: fit-content;
  z-index: 10;
}
code.example {
  background-color: rgba(144, 238, 144, 0.25);
}
code.faq-example {
  background-color: rgba(144, 144, 144, 0.25);
  font-size: 11px;
  margin-left: 10px;
  padding: 5px;
}
.code-block {
  text-align: left;
  width: fit-content;
}
/* Definition lists for vocabulary */
dl {
  background-color: rgba(255, 248, 220, 0.15);
  border-radius: 5px;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  max-width: 85%;
  padding: 10px;
  width: fit-content;
}
dt {
  color: rgba(10, 10, 10, 1);
  font-weight: bold;
  text-decoration: underline;
}
dd {
  margin: 0px 50px 5px 15px;
}
.dl-container {
  display: flex;
  justify-content: left;
  margin-left: 25px;
}
/* Footer section */
footer {
  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.65));
  border-radius: 10px 10px 0 0;
  bottom: 0;
  padding: 5px 0px;
  position: relative;
  width: 100%;
  z-index: 100;
}
footer .container {
  justify-content: left;
  max-width: 100%;
  padding: 0px;
}
footer h5,
footer .col-md-3 a {
  text-align: left;
  white-space: nowrap;
}
footer a, 
footer h5, 
footer p, 
footer ul {
  color: rgba(255, 255, 255, 1.0);
  display: flex;
  flex-direction: column;
  font-family: Tahoma, sans-serif;
  font-size: 12px;
  line-height: 14px;
  margin: 0;
  padding: 0px 10px;
  text-decoration: none;
  white-space: normal;
}
/* Navigation bar styling */
.brand-logo {
  height: 40px;
  max-width: 100%;
}
.navbar-brand {
  color: rgba(255, 255, 255, 1.0);
  font-family: Tahoma, sans-serif;
  margin: 0px;
  padding-left: 5px;
  padding-right: 10px;
  font-size: 16px;
  font-weight: bold;
  text-shadow: 
    1px 1px 0 #000, 
    -1px -1px 0 #000, 
    1px -1px 0 #000, 
    -1px 1px 0 #000, 
    2px 2px 5px yellow;
}
.navbar-brand:hover {
  color: rgba(128, 128, 128, 1.0);
}
.navbar {
  background: linear-gradient(to right, rgba(0, 0, 0, 1.0), rgba(11, 41, 63, 0.95));
  border-radius: 0 0 10px 10px;
  height: fit-content;
  margin: 0;
  padding: 0px 10px;
}
.navbar-nav, .nav-link {
  color: rgba(255, 255, 255, 1.0);
}
.navbar-nav:hover, 
.nav-item:hover, 
.nav-link:hover,
.dropdown-item:hover {
  color: rgba(255, 255, 0, 1.0);
}
.nav-item {
  font-size: 16px;
  text-shadow:   
    1px 1px 5 #000, 
    -1px -1px 5 #000, 
    1px -1px 5 #000, 
    -1px 1px 5 #000;
}
.game {
  color: rgba(150, 250, 250, 1)
}
.nav-item,
.dropdown-item {
  color: rgba(255, 255, 255, 1.0);
}
.dropdown-item {
  font-size: 14px;
  padding: 0px 10px;
}
.dropdown-menu {
  border-radius: 10px;
}
.dropdown-menu,
.dropdown-item:hover {
  background-color: rgba(11, 41, 63, 1.0);
}
/* IGV styling */
#igv-container {
  border: 0.5px solid rgba(0, 0, 0, 0.50);
  border-radius: 3px;
  margin: 10px 0;
  max-height: 600px;
  overflow-y: auto;
  padding: 10px;
  width: 98.5%;
}
.igv-ideogram-canvas {
  max-height: 100px;
}
label, button {
  color: rgba(0, 0, 0, 1);
  font-family: Tahoma, sans-serif;
  font-size: 14px;
  font-weight: normal;
  margin-left: 25px;
}
/* Media query for screens smaller than 768px */
@media (max-width: 768px) {
  h1 {
    font-size: 20px;
  }
  h2 {
    font-size: 16px;
  }
  h3 {
    font-size: 14px;
  }
  p {
    font-size: 12px;
  }
  ul {
    font-size: 10px;
  }
  th, td, code, dl, .publications a {
    font-size: 10px
  }
  .grid-item {
    font-size: 10px
  }
  .separator-dots {
    font-size: 8px;
    letter-spacing: 8px;
  }
  header .display-4 {
    font-size: 22px;
    margin: 0px;
  }
  .navbar-nav {
    margin: 0;
    width: 100%;
  }
  .nav-item a {
    margin: 0;
    padding: 0px 10px;
  }
  .dropdown-menu {
    background: transparent;
    margin-left: 0px;
    padding: 0px 10px;
  }
/*  .nav-item a:hover,
  .dropdown-menu a:hover {
    background: rgba(128, 128, 128, 0.55);
  }*/
  .table-container {
    overflow-x: auto;
    width: 90%;
  }
  #data-table th:first-child,
  #data-table td:first-child {
    left: 0;
    position: sticky;
    z-index: 2;
  }
  #data-table th:first-child {
  background-color: rgba(130, 180, 230, 1);
  }
  #data-table td:first-child {
  background-color: rgba(245, 245, 245, 1);
  }
  /*  Style the menu toggle button  */
  .navbar-toggler {
    border: none;
    background: transparent;
    font-size: 16px;
    color: white;
    text-shadow: 2px 2px 5px rgba(10, 10, 0, 0.50);
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.50);
    transition: color 0.3s ease;
  }
  .navbar-toggler .bi-list {
    display: none;
  }
  .navbar-toggler .bi-x {
    display: none;
  }
  .navbar-toggler.collapsed .bi-list {
    display: block;
  }
  .navbar-toggler:not(.collapsed) .bi-x {
    display: block;
  }
}
@media (max-width: 1080px) {
  footer .container {
    text-align: left;
  }
  footer a, 
  footer h5, 
  footer p, 
  footer ul {
    display: flex;
    font-size: 10px;
    padding: 0px 20px;
    white-space: normal;
  }
}

